app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require normalize
 *= require bootstrap-theme
 *= require bootstrap
 *= require justified-nav
 *= require_self
 *= require_tree .
 *= stub active_admin
 */

li.error {
  color: red;
}

.alert {
  text-align: center;
  font-size: 18px;
  font-weight: bold;
  visibility: hidden;
  height: 49px;
  margin: 10px 0 10px 0;
}

